# aoc2023

./: .gitignore  .hlint.yaml  LICENSE  aoc2023.cabal  flake.nix  fourmolu.yaml
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs
