cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Mahdi Seyedan
maintainer:         mahdi.se@yahoo.com

library
    exposed-modules:  Day1
                      Day2
                      Day3
                      Day4
                      Day5
                      Day6
                      Day7
    build-depends:    base ^>=4.16.4.0
                    , array
                    , text
                    , bytestring
                    , containers
                    , vector
                    , split
                    , megaparsec
                    , parser-combinators
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:  BangPatterns
                         ConstraintKinds
                         DataKinds
                         DeriveGeneric
                         DerivingStrategies
                         DerivingVia
                         FlexibleContexts
                         FlexibleInstances
                         GeneralizedNewtypeDeriving
                         InstanceSigs
                         KindSignatures
                         LambdaCase
                         MultiParamTypeClasses
                         OverloadedStrings
                         OverloadedLabels
                         RecordWildCards
                         ScopedTypeVariables
                         TypeApplications
                         TypeFamilies
                         TypeOperators
                         GADTs
                         ViewPatterns
                         PatternSynonyms
                         BlockArguments
                         RankNTypes
                         StandaloneDeriving
                         NamedFieldPuns
                         DeriveAnyClass
                         DuplicateRecordFields
                         OverloadedRecordDot
