cabal-version: 3.0
name:          aoc2023
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Mahdi Seyedan
maintainer:    mahdi.se@yahoo.com
build-type:    Simple

common warnings
  ghc-options: -Wall -Wno-unused-imports

library
  import:             warnings
  exposed-modules:
    Day1
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7

  build-depends:
    , array
    , base                ^>=4.17.2.1
    , bytestring
    , containers
    , megaparsec
    , parser-combinators
    , split
    , text
    , vector

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    BangPatterns
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
